...
                        Box {
                            IconButton(
                                onClick = { expanded = true }
                            ) {
                                Icon(
                                    Icons.Default.MoreVert,
                                    contentDescription = "More options",
                                    tint = LightPink,
                                    modifier = Modifier
                                        .fillMaxHeight()
                                        .border(
                                            1.dp,
                                            LightPink,
...
                                onDismissRequest = { expanded = false },
                                modifier = Modifier
                                    .zIndex(1f)
                                    .background(BrightPink.copy(alpha = 0.95f))
                            ) {
                                DropdownMenuItem(
                                    text = { Text("Выйти") },
                                    onClick = {
                                        viewModel.logout()
                                        expanded = false
                                    },
                                    leadingIcon = {
                                        Icon(
...
