...
                    Text(
                        text = "Уже есть аккаунт? ",
                        style = MaterialTheme.typography.bodyMedium,
                        color = DarkGreen.copy(alpha = 0.7f)
                    )
                    Text(
                        text = "Войти",
                        style = MaterialTheme.typography.bodyMedium,
                        color = DarkGreen,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier.clickable { onNavigateToSignIn() }
                    )
                }
...
