...
                    ?.toRequestBody("text/plain".toMediaTypeOrNull())

                val res = api.analyzeComposition(filePart, textPart)
                val body = res.result

                _result.value = if (body?.issues.isNullOrEmpty()) {
                    "Всё в порядке!"
                } else {
                    val list = body!!.issues!!.joinToString("\n\n") { issue ->
                        "Ингредиент: ${issue.ingredient}\nКатегория: ${issue.category}\nПричина: ${issue.reason}"
                    }
                    "Обнаружены проблемы:\n\n$list"
                }
...
