...
        ) {
            item {
                Column(
                    verticalArrangement = Arrangement.spacedBy(16.dp)
                ) {
                    FeatureCard(color = LightPink,
                        title = "Проверка составов",
                        height = 280.dp,
                        onClick = { navController.navigate(Screen.CompositionCheck.route) })
                    FeatureCard(color = DarkGreen, title = "Гайд", height = 132.dp, onClick = {
                        navController.navigate(Screen.Guide.route)
                    })
                }
...
